[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sable-platform"
version = "0.1.0"
description = "Suite-level platform backbone for the Sable tool stack"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "click>=8.0",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "anthropic>=0.40",
    "python-telegram-bot~=21.0",
    "discord.py~=2.4",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9"]

[project.scripts]
sable-platform = "sable_platform.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["sable_platform*"]

[tool.setuptools.package-data]
sable_platform = [
    "db/migrations/*.sql",
    "alembic/*.py",
    "alembic/*.mako",
    "alembic/versions/*.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    # discord.py 2.7.1's escape_markdown passes re.sub's `count` positionally,
    # which CPython 3.14 deprecates. Library-internal (not a relay defect — the
    # §15.2 escaping invariant still holds); narrowly scoped so it never masks a
    # real relay warning. Drop when discord.py bumps past the fix.
    "ignore:'count' is passed as positional argument:DeprecationWarning:discord.utils",
]
